--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # .env
-DISCORD_TOKEN="MTAyMTMxMzM4MTM5NjkyNjU3NA.GQNCiS.nvGGopw2wILn6RwK04ACnp2AzcoyW0qWBwOQiY"
-GUILD_TOKEN="268602082695577601"
+DISCORD_TOKEN="MTAyMTMxMzM4MTM5NjkyNjU3NA.GmKY4t.oN_A-bFHe-zH1OJx_rLXIbn9jcO8Qg3TI907Rk"
+GUILD_TOKEN=268602082695577601
